Sat Oct  9 14:26:08 2021  Rob Lauer  <rlauer6@comcast.net>

	[BLM::Startup::Input]:
	* src/main/perl/lib/BLM/Startup/Input.pm.in
	(TIEHASH): scrub on arrays

Mon Mar 22 11:46:31 2021  Rob Lauer  <rlauer6@comcast.net>

	[buildspec]:
	* buildspec.yml:
	- version 0.2 (corrects export XXX issue)
	- +autoconf, -autotools
	- cd to $CODEBUILD_SRC_DIR before configure
	* src/main/perl/lib/Bedrock/Application/Plugin.pm.in: typo

Thu Mar  4 13:48:38 2021  Rob Lauer  <rlauer6@comcast.net>

	[buildspec]:
	* buildspec.yml: BRANCH

Thu Mar  4 13:23:47 2021  Rob Lauer  <rlauer6@comcast.net>

	[email address update]:
	* configure.ac: update email address of maintainer
	* src/main/perl/lib/Bedrock/Apache/Request_shell.pm.in: likewise
	* src/main/perl/bin/bedrock.pl.in: likewise

	[@PERL@]:
	* src/main/perl/lib/Bedrock/Apache/bedrock_sh.pl

	[build cleanup]:
	* bedrock.spec.in
	(bedrock-core): new
	- +Bedrock::VERSION
	(bedrock-shell)
	- -bedrock-template
	- +bedrock, bedrock-core
	- -Bedrock::VERSION
	(openbedrock)
	- +bedrock-shell, +bedrock-core

Thu Mar  4 07:20:56 2021  Rob Lauer  <rlauer6@comcast.net>

	[3.0.2-9]:
	* README.md: testing
	* bedrock-build: bump

Wed Mar  3 17:25:59 2021  Rob Lauer  <rlauer6@comcast.net>

	[housekeeping]:
	* .gitignore: + autotools, bedrock.log, etc
	* buildspec.yml: YRB_EXTRA
	* src/main/perl/lib/Bedrock/Model/Handler.pm.in: pod

Tue Dec 22 07:27:52 2020  Rob Lauer  <rlauer6@comcast.net>

	[3.0.2-8]:

	[config cache bug]:
	* src/main/perl/lib/Bedrock/Apache/BedrockSessionFiles.pm.in
	(handler)
	- $conf never set if $BEDROCK_CONFIG defined (cached)

Thu Nov  5 07:18:13 2020  Rob Lauer  <rlauer6@comcast.net>

	[3.0.2-7]:
	* bedrock-build: bump
	[shell error handling]:
	* src/main/perl/lib/Bedrock/Apache/Bedrock.pm.in
	- capture $@, use $err instead
	- if bedrock shell, if pebbles get source from file(?)

	[multiline option]:
	* src/main/perl/lib/Bedrock/Text/TagX/TAG/NoBody/Raise.pm.in