@@ -161,18 +161,28 @@ sub migrate {
   # - accurately detect new columns
   # - accurately detect dropped columns
   
-  # ...the bad news is that a name change of a column is bad thing as
-  # it will be seen as an add and delete
+  # ...the bad news is that a name change of a column is a bad thing
+  # as it will be seen as an add and delete. Short of giving the
+  # migration script/class a clue it would result in lost data.
   
   foreach my $field (keys %table_state) {
     if ( exists $target_model{$field} ) {
-      $table_state{$field}->set_ignore_unknown_keys($self->get_ignore_unknown_keys());
-      unless ( lc($table_state{$field}->as_string) eq lc($target_model{$field}->as_string) ) {
+      my $target_model_field = $target_model{$field};
+      my $table_state_field = $table_state{$field};
 
-	print STDERR lc($table_state{$field}->as_string), "\t"
+      # synonym boolean <=> tinyint(1)
+      if ( $target_model_field->get_type() eq 'boolean' ) {
+        $target_model_field->set_type('tinyint(1)');
+      }
+      
+      $table_state_field->set_ignore_unknown_keys($self->get_ignore_unknown_keys());
+
+      unless ( lc($table_state_field->as_string) eq lc($target_model_field->as_string) ) {
+
+	print STDERR lc($table_state_field->as_string), "\t"
 	  if $self->get_debug;
 
-	print STDERR lc($target_model{$field}->as_string), "\n"
+	print STDERR lc($target_model_field->as_string), "\n"
 	  if $self->get_debug;
 
 	push @modify_these, $field;
