@@ -1,3 +1,9 @@
+Sun Nov  7 11:09:32 2021  Rob Lauer  <rlauer6@comcast.net>
+	
+	[Bedrock::Model::Migration - boolean - 3.0.2-11]:
+	* src/main/perl/lib/Bedrock/Model/Migration.pm.in
+	(migrate): boolean equivalent to tinyint(1)
+
 Sat Oct  9 14:26:08 2021  Rob Lauer  <rlauer6@comcast.net>
 
 	[BLM::Startup::Input]:
